--- a/NodeBackend/package.json
+++ b/NodeBackend/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
+    "mysql2": "^3.14.1",
     "nodemon": "^3.1.10"
   }
 }
